client/css/main.css
/* ... */
			main .data-source .menu-toggle.selected,
			main .data-source .query-toggle.selected,
			main .data-source .description-toggle.selected,
			main .data-source .share-link-toggle.selected,
			main .data-source .filters-toggle.selected {
				background: var(--color-accent);
				color: var(--color-accent-text);
				border-color: var(--color-accent);
			}
		main .data-source > .description {
			background: #fff;
			box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
			margin-top: calc(var(--gap) * 2);
		}
			main .data-source > .description .body {
				white-space: pre-wrap;
				padding: calc(var(--gap) * 2);
			}
			main .data-source > .description .footer {
				border-top: 1px dashed #ccc;
				padding: 10px;
				font-size: 90%;
				display: flex;
			}
				main .data-source > .description .footer > * {
					margin-right: calc(var(--gap) * 2);
				}
				main .data-source > .description .footer > *:last-child {
					margin-right: 0;
				}
				main .data-source > .description .footer .right {
					margin-left: auto;
				}
				main .data-source > .description .footer a {
					color: #333;
					margin-left: 15px;
					cursor: pointer;
				}
		main .data-source > .query {
			background: #fff;
			box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
			padding: 10px;
			margin-top: calc(var(--gap) * 2);
			user-select: text;
			font-family: monospace;
			max-height: 150px;
			overflow: auto;
		}
		main .data-source > .share-link {
			background: #fff;
			box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
			padding: 10px;
			margin-top: calc(var(--gap) * 2);
		}
			main .data-source > .share-link input {
				width: 100%;
			}

		main .data-source .column .blanket .form footer {
			display: grid;
			grid-template-columns: 1fr 1fr 1fr;
			position: sticky;
			font-size: 110%;
			bottom: 0;
			box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
		}
			main .data-source .column .blanket .form footer button {
				padding: calc(var(--gap) * 2);
				height: auto;
				border-right: 0;
			}
			main .data-source .column .blanket .form footer button:first-child {
				border-left: 0;
			}
		main .data-source > .drilldown {
			margin-top: calc(var(--gap) * 2);
			display: grid;
			grid-template-columns: repeat(auto-fit, minmax(0, auto));
			justify-content: flex-start;
			grid-gap: calc(var(--gap) * 2);
			align-items: center;
		}
			main .data-source > .drilldown a:hover {
				text-decoration: none;
			}
		main .data-source > .columns {
			display: flex;
			width: 100%;
			overflow: auto;
			order: 1;
			margin-top: calc(var(--gap) * 2);
		}
		main .data-source > .columns::-webkit-scrollbar {
			display: none;
		}
			main .data-source > .columns .column {
				display: flex;
				position: relative;
				margin: 0 var(--gap);
				align-items: center;
				transition: opacity var(--transition-duration);
			}
			main .data-source > .columns .column.disabled > span,
			main .data-source > .columns .column.disabled > button {
				background: #eee;
				opacity: 0.5;
			}
			main .data-source > .columns .column.being-dragged {
				border: 1px blue dashed;
				opacity: 0.5;
			}
			main .data-source > .columns .column.drag-enter:before {
				content: "";
				position: absolute;
				left: -6.5px;
				top: 0;
				bottom: 0;
				background: blue;
				width: 2px;
			}
			main .data-source > .columns .column.filtered {
				background: #ff9;
			}
			main .data-source > .columns .column.error {
				background: #fcc;
			}
			main .data-source > .columns .column .name:hover {
				opacity: 0.6;
			}
				main .data-source > .columns.being-dragged .column * {
					pointer-events: none;
				}
				main .data-source > .columns .column > .color {
					border-radius: 15px;
					width: 15px;
					height: 15px;
					margin-left: var(--gap);
				}
				main .data-source > .columns .column > .name {
					padding: 0px 10px;
					display: flex;
					flex: 1;
					font-size: 85%;
					cursor: pointer;
					align-items: center;
					transition: background var(--transition-duration),
								box-shadow var(--transition-duration);
				}
				main .data-source .column .edit-column {
					opacity: 0;
					transition: opacity var(--transition-duration);
					padding: 0 var(--gap);
				}
				main .data-source .column:hover .edit-column {
					opacity: 1;
				}

				main .data-source > .columns .column .blanket {
					position: fixed;
					top: 0;
					bottom: 0;
					left: 0;
					right: 0;
					background: rgba(0, 0, 0, 0.25);
					z-index: 11;
					display: flex;
					align-items: center;
					justify-content: center;
				}
					main .data-source .column .blanket .block {
						box-shadow: 0 0 100px rgba(0, 0, 0, 0.25);
						max-height: 90%;
						max-width: 100%;
						flex-basis: 750px;
						overflow: auto;
						padding: 0;
					}
						main .data-source .column .blanket form .parameter-list {
							display: grid;
							grid-gap: calc(var(--gap) * 2);
							padding-right: calc(var(--gap) * 2);
						}
						main .data-source .column .blanket form .parameter {
							display: grid;
							grid-template-columns: 1fr 1fr 1fr max-content;
						}
						main .data-source .column .blanket form .parameter .delete:hover {
							background-color: #c11;
							border-color: #c11;
						}
							main .data-source .column form h3 {
								margin: 0;
								padding: var(--gap) 10px;
								background: var(--color-primary);
								color: var(--color-primary-text);
								position: sticky;
								top: 0;
								font-weight: normal;
							}
							main .data-source .column form label {
								margin-left: calc(var(--gap) * 2);
							}
								main .data-source .column form .search {
									grid-template-columns: auto 200px;
									display: grid;
								}
									main .data-source .column form .search input {
										flex: 1;
										margin-left: calc(var(--gap) * 2);
										width: calc(100% - 20px);
									}
								main .data-source .column form input {
									transition: background var(--transition-duration);
								}
/* ... */

